app/assets/stylesheets/print.scss
@import 'application/modules/_ssm';

.ssm-print .client__assessment-question {
  font-size: 14px;
  font-weight: bold;
  font-family: "Open Sans", sans-serif;
}

.muted, .gray {
  color: #454545;
}

.no-data {
  color: $gray-light;
  font-style: italic;
}

// .ssm-print wrapper for ssm from epic to force print styles
.ssm-print .client__assessment-question {
  padding-bottom: 0.5em;
}

.ssm-print .client__assessment-answer {
  padding-bottom: 1.5em;
  margin-left: 1em;
}

#vsm-container {
  display: none !important;
}
a[href]:after {
  content: none;
}
header {
  background: transparent;
  box-shadow: none;
}
.site-name {
  width: initial;
  background: transparent;
  box-shadow: none;
  padding: 0;
  position: relative;
}
.tagline {
  color: #444;
  margin-left: 0;
  clear: both;
  padding: 0;
}
footer {
  min-height: initial;
}

.service-type
{
  border: 2px solid rgb(212, 208, 208);
  border-radius: 2px;
}
.service-type__bed_night,
.service-type__service,
.service-type__entry,
.service-type__exit,
.service-type__extrapolated,
.service-type__first
{
  margin: 0.2em 0;
  font-size: 0.7em;
  display: inline-block;
}
.service-type__entry
{
  border: 2px solid rgb(73, 95, 121);
}
.service-type__exit
{
  border: 2px solid rgb(119, 55, 71);
}
.service-type__extrapolated
{
  border: 2px solid rgb(196, 193, 199);
}
.service-type__service
{
  border: 2px solid rgb(45, 118, 124);
}
.service-type__first
{
  border: 2px solid rgb(86, 114, 170);
}
.service-type__program-type {
  font-weight: bold;
  font-size: 0.7em;
  background-color: black;
  color: white;
  display: inline-block;
  padding: 0.2em 0.4em;
}

.history__pdf
{
  font-family: sans-serif;
}
.history__logo
{
  float: left;
  width: 100px;
}
.history__title h1
{
  padding-left: 120px;
  padding-top: 40px;
  font-size: 1rem;
}
.history__summary
{
  padding-left: 120px;
  font-size: 0.7rem;
}
.history__dates
{
  margin-top: 2em;
}
.history__dates-table
{
  width: 100%;
  font-size: 0.7rem;
  tr
  {
    break-inside: avoid-page;
    page-break-after: auto;
  }
  thead { display: table-header-group; }
  tfoot { display: table-footer-group; }
}


$print-layout-header-height: 50px;
$pdf-default-font-size: 14px;
$pdf-h1-font-size: 20px;
$pdf-text-line-height: 1.5em;
$pdf-table-border-color: darken(#f9f9f9, 3%);

@mixin pdf-heading {
  font-size: $pdf-h1-font-size;
  border-bottom: 2px solid #E7E7E7;
  padding-bottom: 5px;
  color: #454545;
  margin-top: 5px;
}

.l-print {
  position: relative;
  font-family: sans-serif;
}

// Wicked PDF sometimes adds a blank page at the end
// As per https://github.com/wkhtmltopdf/wkhtmltopdf/issues/3088
// This will suppress it.
.hide-blank-page {
  height: 0;
}

.l-print,
.l-print table {
  font-size: $pdf-default-font-size;
}

.l-print button,
.l-print .btn,
.l-print a {
  display: none;
}

.l-print table {
  width: 100%;
  border-collapse: collapse;
}
.l-print tr
{
  break-inside: avoid-page;
  page-break-after: auto;
}
.l-print thead {
  display: table-header-group;
}
.l-print tfoot {
  display: table-footer-group;
}

.l-print table thead tr th {
  background: $pdf-table-border-color;
  text-align: left;
  padding: 8px 5px;
}

.l-print table tbody tr {
  td {
    vertical-align: middle;
    padding: 8px 5px;
    border-bottom: 1px solid $pdf-table-border-color;
    &,
    p {
      line-height: $pdf-text-line-height;
    }
    p {
      margin: 0 0 3px 0;
      &:last-of-type {
        margin-bottom: 0;
      }
    }
  }
}

.l-print h1 {
  @include pdf-heading;
}

.l-print h4 {
  margin-bottom: 5px;
}

.l-print p {
  margin-top: 0;
  line-height: $pdf-text-line-height;
}

.l-print dl {
  dt {
    margin-top: 15px;
    margin-bottom: 5px;
    font-weight: bold;
  }
  dd {
    margin-bottom: 3px;
    margin-left: 0px;
    &:empty {
      display: none;
    }
    &.breaker {
      display: block !important;
      margin-bottom: 5px;
    }
  }
  dt,
  dd {
    &.inline {
      display: inline;
    }
  }
  &.l-print__item {
    margin-bottom: 75px;
  }
}

.l-print .no-break {
  break-inside: avoid-page;
}

.l-print .minor-text {
  font-style: italic;
  color: #999999;
}

.l-print__page-content {
  padding: $print-layout-header-height 25px;
}

.l-print__summary-items {
  display: flex;
  padding: 0;
  list-style-type: none;
  li {
    margin-right: 50px;
  }
}

.l-print__section {
  margin-bottom: 40px;
}

.l-print__section--page {
  page-break-after: always;
  margin-bottom: 40px;
  padding-top: 10px;
}

.l-print__item-wrapper {
  .l-print__item {
    margin-bottom: 20px;
  }
}

.l-print__item {
  margin-bottom: 20px;
}

.l-print__item--bordered {
  border-bottom: 1px solid #CCC;
  &:last-of-type {
    border: 0;
  }
}

// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Specific to cover sheet
// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.coverSheet {
  h1 {
    font-size: 24px;
    width: 50%;
    margin: auto;
    text-align: center;
    color: #091F2F;
    border-bottom: unset;
  }
  &__details {
    p {
      margin-bottom: 10px;
    }
  }
}

// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Specific to Care Plan PDF
// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.l-print [class^='health-care-plan'] {
  h3 {
    @include pdf-heading;
  }
}

.l-print .health-care-plan__services table {
  tr td {
    &:first-of-type {
      width: 125px;
    }
  }
}

.l-print .health-care-plan__equipments table {
  tr td {
    &:last-of-type {
      width: 200px;
    }
  }
}

.l-print .cha__summary,
.l-print .ssm__summary {
  display: flex;
  flex-direction: row !important;
  flex-wrap: wrap;
  width: 100%;
  > div {
    width: 33%;
    margin-bottom: 0.5em;
  }
  dt {
    font-weight: 600;
    display: inline !important;
  }
  dd {
    display: inline !important;
    margin: 0;
  }
}

.l-print .ssm__row {
  break-inside: avoid;
  border-bottom: 1px solid $gray-020;
}
.l-print .ssm__row__question-answer {
  font-size: $pdf-default-font-size;
  line-height: $pdf-text-line-height;
}

.l-print .client__assessment-question,
.l-print .client__assessment-answer {
  align-self: flex-start;
  margin: 0;
  padding: 0;
}

.l-print .client__assessment-question--title {
  margin-bottom: 5px;
  font-size: 15px;
  font-weight: bold;
}

.l-print .client__assessment-answer--text {
  margin-top: 3px;
}

.l-print .client__assessment-answer--notes {
  p {
    margin-top: 3px;
    margin-bottom: 20px;
  }
}

.l-print .client__assessment-overall-summary {
  margin-top: 15px;
  margin-bottom: 20px;
}

.l-print .client__assessment-section-summary {
  break-inside: avoid-page;
}

.l-print .client__assessment-question-summary {
  margin-top: 0;
  padding-left: 10px;
  break-inside: avoid-page;
}

.l-print .health-care-plan__cha {
  .client__assessment-section-summary {
    margin-bottom: 45px;
    page-break-inside: auto;
  }
  .client__assessment-question {
    line-height: $pdf-text-line-height;
    font-weight: bold;
  }
  .client__assessment-answer {
    line-height: $pdf-text-line-height;
    margin-bottom: 15px;
    &,
    ul {
      margin-top: 5px;
      padding-left: 15px;
    }
  }
  h4 {
    margin-bottom: 10px;
    font-size: 15px;
    font-weight: bold;
  }
}

.row
{
  clear: both;
  width: 100%;
}
.row .col-sm-6
{
  width: 50%;
}
.col-sm-4
{
  width: 30%;
}

.health__care-hub-note
{
  padding: 1em;
  background-color: #F5F5F5;
  border: 1px solid #B0B0B0;
  text-align: center;
  font-size: 1rem;
  line-height: 1.5rem;
  &__content {
    width: 75%;
    margin: auto;
  }
}

.health-care-plan__services,
.health-care-plan__equipments {
  h3 {
    margin-bottom: 0px
  }
}

// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Specific to CHA page
// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.cha__section {
  clear: left;
  break-inside: avoid;
  border: 1px solid $gray-020;
  border-radius: 4px;
  padding: 5px 0;
  margin-bottom: 20px !important;

  > div:not(.row) {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: 5px;
    padding-bottom: 5px;
    break-inside: avoid;
  }
  > div:not(:last-child) {
    border-bottom: 1px solid $gray-020;
  }
  > * {
    padding-left: 10px;
    padding-right: 10px;
  }

  .client__assessment-question,
  .cha__help-text,
  h6,
  h5,
  h4 {
    font-size: 14px;
    font-weight: bold;
    font-family: "Open Sans", sans-serif;
  }
  h3 {
    margin: 10px 0;
  }
  h4, h5, h6 {
    flex-basis: 100%;
    margin: 4px 0 10px 0;
  }
  .cha__help-text {
    font-weight: normal;
    margin-bottom: 10px;
    flex-basis: 100%;
  }
  .client__assessment-question,
  .client__assessment-answer {
    width: 48%; // two-column flex layout
    padding: 0;
    margin: 0 !important;
    line-height: 1.5;
  }
  .client__assessment-answer {
    text-indent: 0 !important;
    padding-left: 15px !important;
    font-family: "Open Sans", sans-serif;
  }
  h1:empty,
  h2:empty,
  h3:empty,
  h4:empty,
  h5:empty,
  .cha__help-text:empty {
    display: none;
    margin: 0;
    padding: 0;
  }

  &.epicTable {
    break-inside: avoid-page;
    .slab {
      padding-left: 0;
      padding-right: 0;
    }
  }

  // row with table layout is used for certain questions
  .row {
    margin: 0;
  }
  .row.cha__section-columns {
    display: table;
    table-layout: fixed;
    width: 100%;
    .col-sm-6,
    .col-sm-4 {
      display: table-cell;
    }
    .col-sm-6 {
      width: 50%;
    }
    .col-sm-4 {
      width: 33%;
    }
    .client__assessment-question, .client__assessment-answer {
      width: 100%;
    }
  }

  // custom styling per questions
  .g_q,
  .i_q,
  .l_q {
    float: left;
    break-inside: avoid-page;
    margin-bottom: 10px;
  }
  .l_q, .i_q {
    width: 30%;
    margin-top: 15px;
    min-height: 80px;
  }
}

// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// Specific to signature page
// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 .health-care-plan__responsible-parties {
  .signature__section {
    padding: 40px 0;
    border-bottom: 1px solid $gray-020;
    .signature__section__col,
    .signature__section__row {
      display: flex;
    }
    .signature__section__row:first-child {
      margin-bottom: 20px;
    }
    .signature__label {
      font-weight: bold;
      margin-right: 8px;
      font-size: 12px;
      line-height: 1.5;
    }
    .signature__line {
      border: 0;
      border-bottom: 1px solid black;
      width: 300px;
    }
    .signature__section__signature {
      width: 100%;
      display: flex;
      padding-right: 8px;
    }
    .signature__section__signedOn {
      display: flex;
      width: 50%;
      .signature__line {
        width: 160px;
      }
    }
    .signature__line-name {
      margin-bottom: 30px;
      &::after {
        content: 'Please print name';
        position: relative;
        top: 20px;
        font-size: 12px;
        font-style: italic;
        color: $gray-light;
      }
    }
  }
  .signature__understanding {
    padding: 50px 0;
  }
}

